--- a/slider-style.scss
+++ b/slider-style.scss
@@ -205,7 +205,7 @@
 .product-slide {
     $width: 275px;
     $w: 100%;
-
+    height: 100%;
     width: $width;
     @include _1300 {
         width: $w;
@@ -228,7 +228,8 @@
         margin-bottom: 17px;
     }
     &__image {
-        height: $width;
+        //height: $width;
+        height: 100%;
         width: $width;
         @include _1300 {
             width: $w;
@@ -240,9 +241,9 @@
         max-width: 100%;
         img {
             width: $width;
-            height: $width + 2px;
             margin-top: -1px;
             object-fit: cover;
+            height: calc(100% + 2px);
             @include _1300 {
                 max-width: 100%;
                 max-height: 100%;
