--- a/slider-style.scss
+++ b/slider-style.scss
@@ -240,6 +240,7 @@
         justify-content: center;
         margin: 0 auto 13px auto;
         max-width: 100%;
+        aspect-ratio: 1 / 1;
         img {
             width: $width;
             margin-top: -1px;
